--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Fundus_photograph_of_normal_left_eye.jpg/1200px-Fundus_photograph_of_normal_left_eye.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diabetic Retinopathy</title>
   </head>
